--- a/client/css/generics.css
+++ b/client/css/generics.css
@@ -7,3 +7,9 @@ body {
     background-color: var(--bg-color);
     color: white;
 }
+header {
+    height: 7vh;
+    display: flex;
+    align-items: center;
+    padding: 0 2%;
+}
