new React components

--- a/client/css/colors.css
+++ b/client/css/colors.css
@@ -1,5 +1,8 @@
 :root {
-    --main-color: rgb(0, 183, 255);
-    --main-color-low-opacity: rgba(0, 183, 255, .4);
-    --bg-color: rgb(36, 36, 36);
+    --main-color: rgb(251, 174, 60);
+    --main-color-low-opacity: rgba(251, 174, 60, .4);
+    --bg-color: rgb(27, 27, 27);
+    --light-bg-color: rgb(35, 35, 35);
+    --error-color: red;
+    --success-color: green;
 }
