--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,6 +1,6 @@
 :root {
-  --horiz-margin: 3vh;
-  --vert-margin: 2%;
+  --horiz-margin: 2vh;
+  --vert-margin: 1%;
 }
 * {
   margin: 0;
@@ -21,14 +21,15 @@ a {
 .menu-container {
   background-color: var(--light-bg-color);
   height: 100vh;
-  width: 20%;
+  width: 17%;
+  min-width: 200px;
 }
 .menu-container .logo-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 10vh;
-  margin-bottom: 10vh;
+  margin-bottom: 15vh;
 }
 .menu-container .logo-container .logo {
   fill: var(--main-color);
@@ -41,7 +42,7 @@ a {
   font-size: 17px;
 }
 .menu-container .links-container {
-  height: 70vh;
+  height: 65vh;
   display: flex;
   flex-direction: column;
 }
@@ -50,19 +51,34 @@ a {
   align-items: center;
   color: white;
   text-decoration: none;
-  padding: 1vh 0;
+  padding: 1.5vh 0;
   padding-left: 5%;
   transition: background-color .2s;
+  position: relative;
+}
+.menu-container .links-container a.active {
+  color: var(--main-color);
 }
 .menu-container .links-container a.active::before {
   content: '';
   display: inline-block;
-  width: 4px;
-  height: 120%;
+  width: 2px;
+  height: 27px;
   background-color: var(--main-color);
-  position: relative;
-  left: -5%;
+  position: absolute;
+  left: 0;
   border-radius: 0 5px 5px 0;
+}
+.menu-container .links-container svg {
+  width: 25px;
+  height: 25px;
+  margin-right: 2%;
+}
+.menu-container .links-container a.active svg path {
+  stroke: var(--main-color);
+}
+.menu-container .links-container svg path {
+  stroke: white;
 }
 .menu-container .links-container a:hover {
   background-color: rgba(100, 100, 100, .1);
@@ -76,22 +92,38 @@ a {
   padding-left: 15%;
 }
 .menu-container .bottom-menu-container a {
+  display: flex;
+  align-items: center;
   color: white;
   text-decoration: none;
   opacity: .3;
   font-size: 14px;
   font-weight: 300;
   margin-bottom: 10px;
+  transition: opacity .2s;
+}
+.menu-container .bottom-menu-container svg {
+  margin-right: 2%;
+  width: 20px;
+  height: 20px;
+}
+.menu-container .bottom-menu-container a:hover {
+  opacity: .6;
 }
 
 .header-and-main-component-container {
-  width: 76%;
-  margin: var(--horiz-margin) var(--vert-margin)
+  width: 83%;
+  height: 100vh;
 }
 
 .header-container {
-  height: 4vh;
+  height: 7vh;
+  width: 99%;
+  padding-right: 1%;
+}
+.header-container .header {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
@@ -109,9 +141,11 @@ a {
 }
 
 .main-component-container {
-  background-color: var(--light-bg-color);
-  height: 81vh;
-  margin-top: var(--horiz-margin);
-  border-radius: 7px;
-  padding: var(--vert-margin) var(--horiz-margin);
+  width: 100%;
+  height: 93vh;
+}
+.main-component-container .component {
+  width: 96%;
+  height: -webkit-fill-available;
+  padding: 2%;
 }
