--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -1,7 +1,7 @@
 .header-container {
-    height: 7vh;
-    width: 99%;
-    padding-right: 1%;
+    height: 10vh;
+    width: 97%;
+    padding-right: 3%;
 }
 .header-container .header {
     width: 100%;
@@ -11,8 +11,7 @@
     flex-direction: row-reverse;
 }
 .header-container .profile-img-container {
-    width: 40px;
-    height: 40px;
+    height: 50%;
     border-radius: 50%;
     overflow: hidden;
     margin-left: 2%;
