--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,36 +1,55 @@
-.currency {
-    width: 35%;
-    background-color: var(--light-bg-color);
-    padding: 10px 25px;
-    border-radius: 7px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2);
-    margin: 20px 0;
+/* Hide scrollbar for Chrome, Safari and Opera */
+.crypto-list::-webkit-scrollbar, .user-crypto::-webkit-scrollbar {
+    display: none;
 }
-.currency .currency-data {
-    display: flex;
-    justify-content: space-between;
+/* Hide scrollbar for IE, Edge and Firefox */
+.crypto-list, .user-crypto {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
-.currency .currency-data img {
-    height: 50%;
+
+.crypto-list {
+    margin-right: 3%;
 }
-.currency .currency-data-left-part {
-    display: flex;
-    align-items: center;
-}
-.currency .currency-name {
-    margin-left: 10%;
-    line-height: 20px;
+.crypto-list, .user-crypto {
+    width: 45%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: scroll;
 }
-.currency .currency-name .name {
-    font-weight: 500;
+.crypto-card:first-of-type {
+    margin-top: 0;
 }
-.currency .currency-name .base {
-    font-size: 13px;
-    opacity: .5;
-}
-.currency .currency-price {
+.crypto-card {
+    background-color: var(--light-bg-color);
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 15px 20px;
+    border-radius: 7px;
+    margin: 15px 0;
+}
+.crypto-icon-name {
+    display: flex;
+    align-items: center;
+}
+.crypto-card img {
+    width: 30px;
+    margin-right: 15px;
+}
+.crypto-card .crypto-base {
+    font-size: 12px;
+    opacity: .5;
+}
+.crypto-card .crypto-amount {
+    position: relative;
+    right: 0;
+}
+.loding-msg {
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    opacity: .3;
+    margin-top: 40vh;
 }
