--- a/client/src/styles/mainComponent.css
+++ b/client/src/styles/mainComponent.css
@@ -1,10 +1,11 @@
 .main-component-container {
     width: 100%;
-    height: 93vh;
+    height: 90vh;
 }
 .main-component-container .component {
-    width: 96%;
-    height: 95%;
+    width: 100%;
+    height: 100%;
     height: -webkit-fill-available;
-    padding: 2%;
+    display: flex;
+    justify-content: center;
 }
