--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -12,11 +12,14 @@
     margin-right: 3%;
 }
 .crypto-list, .buy-and-sell-form-container {
-    width: 45%;
+    width: 60%;
     height: 100%;
     display: flex;
     flex-direction: column;
     overflow: scroll;
+}
+.crypto-list {
+    width: 35%;
 }
 .crypto-card:first-of-type {
     margin-top: 0;
@@ -46,6 +49,15 @@
     position: relative;
     right: 0;
 }
+.loading-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: .3;
+    font-size: 13px;
+}
 .loding-msg {
     display: flex;
     justify-content: center;
@@ -55,13 +67,76 @@
 }
 
 
-
-
+.first-input-containers {
+    display: flex;
+    justify-content: space-between;
+}
+.input-container {
+    border: 2px solid var(--light-white);
+    border-radius: 7px;
+    display: flex;
+    width: initial;
+}
+.input-container input {
+    background-color: transparent;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 12px;
+    font-size: 18px;
+}
+.input-container .vertical-bar {
+    display: inline;
+    width: 2px;
+    height: auto;
+    margin: 9px 0;
+    background-color: var(--light-white);
+}
+/* REMOVE INPUT ARROWS */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+.select {
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 70%;
+    margin-right: 20px;
+}
+.select .selected {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+.select .option-list {
+    position: absolute;
+    top: calc(100% + 2px);
+    width: 100%;
+}
 .select .option {
     display: flex;
     align-items: center;
+    background-color: var(--light-bg-color);
+    padding: 10px;
+    width: inherit;
 }
-.select .option img, .select .option svg {
+.select img, .select svg {
     width: 25px;
     margin-right: 10px;
+}
+.currency-input-container {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+.currency-input-container img {
+    margin: 0 10px;
 }
