--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -13,6 +13,7 @@
 }
 .buy-and-sell-form-container {
     justify-content: center;
+    align-items: center;
 }
 .crypto-list, .buy-and-sell-form-container {
     width: 55%;
@@ -69,16 +70,34 @@
     margin-top: 40vh;
 }
 
-
+.buy-and-sell-form {
+    position: relative;
+    padding: 20px;
+    background-color: var(--light-bg-color);
+    border-radius: 7px;
+}
 .from-input-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.from-input-container .equal-sign {
+.equal-sign-container {
+    
+}
+.equal-sign {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 45%;
+    top: 90px;
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    color: gray;
+    border-radius: 30px;
     margin: 0 2%;
     font-size: 30px;
-    opacity: .2;
     font-weight: lighter;
 }
 .to-input-container {
@@ -87,18 +106,18 @@
     justify-content: center;
 }
 .input-container {
-    border: 2px solid var(--light-white);
-    border-radius: 7px;
     display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
 }
 .input-container input {
     background-color: transparent;
-    width: 170px;
     color: white;
     border: none;
     outline: none;
     padding: 12px;
-    font-size: 18px;
+    font-size: 22px;
+    text-align: right;
 }
 .input-container .vertical-bar {
     display: inline;
@@ -123,21 +142,20 @@ input[type=number] {
     position: relative;
     display: flex;
     align-items: center;
-    width: 130px;
 }
-.select .selected {
+.selected {
     display: flex;
     align-items: center;
     margin-left: 10px;
 }
-.select .selected svg {
+.selected svg {
     width: 35px;
     margin: 0 8%;
 }
-.select .selected svg path {
+.selected svg path {
     stroke: rgba(255, 255, 255, .5);
 }
-.select .option-list {
+.option-list {
     position: absolute;
     top: calc(100% + 2px);
     z-index: +1;
@@ -151,9 +169,17 @@ input[type=number] {
     padding: 10px;
     width: inherit;
 }
-.select img {
-    width: 25px;
+.selected img {
+    width: 30px;
     margin-right: 10px;
+}
+.crypto-name .name {
+    font-weight: 500;
+    line-height: 18px;
+}
+.crypto-name .symbol {
+    font-size: 13px;
+    opacity: .3;
 }
 .currency-input-container {
     display: flex;
@@ -162,4 +188,21 @@ input[type=number] {
 }
 .currency-input-container img {
     margin: 0 10px;
+}
+.border-top {
+    border-top: 1px solid rgba(255, 255, 255, .2);
+}
+.border-bottom {
+    border-bottom: 1px solid rgba(255, 255, 255, .2);
+}
+form button {
+    background-color: var(--light-bg-color);
+    border-radius: 10px;
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-top: 30px;
 }
