--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,9 +1,9 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
-.crypto-list::-webkit-scrollbar {
+.crypto-list, .option-list::-webkit-scrollbar {
     display: none;
 }
 /* Hide scrollbar for IE, Edge and Firefox */
-.crypto-list {
+.crypto-list, .option-list {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
@@ -33,8 +33,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 20px;
-    border-radius: 7px;
+    padding: 20px 25px;
+    border-radius: 10px;
     margin: 15px 0;
 }
 .crypto-icon-name {
@@ -71,10 +71,12 @@
 }
 
 .buy-and-sell-form {
+    width: 400px;
     position: relative;
-    padding: 20px;
+    padding: 25px;
     background-color: var(--light-bg-color);
-    border-radius: 7px;
+    border-radius: 15px;
+    overflow: hidden;
 }
 .from-input-container {
     display: flex;
@@ -88,7 +90,7 @@
     justify-content: center;
     height: 35px;
     width: calc(100% - 40px);
-    margin-top: -20px;
+    margin-top: -35px;
 }
 .sign-container span {
     display: flex;
@@ -110,6 +112,9 @@
     display: flex;
     justify-content: space-between;
     padding: 20px 0;
+}
+.input-container:first-child {
+    padding-top: 0;
 }
 .input-container input {
     background-color: transparent;
@@ -147,32 +152,52 @@ input[type=number] {
 .selected {
     display: flex;
     align-items: center;
-    margin-left: 10px;
 }
 .selected svg {
-    width: 35px;
-    margin: 0 8%;
+    width: 20px;
+    margin: 0 0 0 15px;
 }
 .selected svg path {
     stroke: rgba(255, 255, 255, .5);
 }
 .option-list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top: calc(100% + 2px);
+    top: 100%;
+    left: 0;
     z-index: +1;
-    width: -webkit-fill-available;
-    width: -moz-available;
+    background-color: var(--light-bg-color);
+    border-radius: 15px;
+    overflow: scroll;
+    animation: slide-up .2s ease-out forwards;
 }
-.select .option {
+@keyframes slide-up {
+    from { top: 100%; }
+    to { top: 0; }
+}
+.option-list .option {
     display: flex;
     align-items: center;
-    background-color: var(--light-bg-color);
-    padding: 10px;
-    width: inherit;
+    justify-content: space-between;
+    padding: 20px;
+    cursor: pointer;
 }
-.selected img {
+.option-list .option:hover {
+    background-color: rgb(36, 36, 36);
+}
+.option-list .option:first-child {
+    border-radius: 15px 15px 0 0;
+}
+.selected img, .option-list img {
     width: 30px;
-    margin-right: 10px;
+    margin-right: 15px;
+}
+.option .crypto-name-container {
+    display: flex;
+    align-items: center;
 }
 .crypto-name .name {
     font-weight: 500;
@@ -192,6 +217,13 @@ input[type=number] {
 }
 .border-bottom {
     border-bottom: 1px solid rgba(255, 255, 255, .2);
+}
+.crypto-price-container {
+    text-align: right;
+}
+.crypto-price-container .crypto-price {
+    font-size: 14px;
+    opacity: .5;
 }
 form button {
     background-color: var(--light-bg-color);
