finish crypto conversion system

--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -226,13 +226,10 @@ input[type=number] {
     opacity: .5;
 }
 form button {
-    /* background-color: var(--light-bg-color); */
     background-color: var(--main-color);
     border-radius: 8px;
     border: none;
-    /* border: 2px solid var(--main-color); */
-    /* color: var(--main-color); */
-    color: white;
+    color: var(--bg-color);
     padding: 10px 0;
     font-size: 16px;
     cursor: pointer;
