--- a/client/src/styles/activity.css
+++ b/client/src/styles/activity.css
@@ -9,7 +9,7 @@
 }
 .activity {
     display: flex;
-    margin: 40px 0;
+    margin: 30px 0;
 }
 .activity .activity-left-part {
     position: relative;
@@ -29,14 +29,15 @@
 }
 .activity .vertical-bar {
     position: absolute;
-    top: -90%;
+    top: -65%;
     width: 1px;
-    height: 100%;
+    height: 80%;
     background-color: white;
     opacity: .2;
 }
 .activity-list .date {
-    padding: 10px 0;
+    padding-bottom: 10px;
+    padding-top: 15px;
     margin-bottom: -30px;
     background-color: var(--bg-color);
     position: relative;
@@ -44,12 +45,14 @@
 }
 
 .activity-list .activity-card {
+    background-color: var(--light-bg-color);
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 15px;
-    padding: 10px 15px;
+    padding: 20px 25px;
+    box-shadow: var(--box-shadow);
 }
 .activity-card .from, .activity-card .to {
     width: calc(50% - 12px);
@@ -62,7 +65,7 @@
 .activity-card .price {
     line-height: 17px;
 }
-.activity-card .price p:last-child {
+.activity-card .price .currency-price {
     font-size: 13px;
     opacity: .5;
 }
