--- a/client/src/styles/colors.css
+++ b/client/src/styles/colors.css
@@ -6,4 +6,5 @@
     --light-white: rgb(209, 209, 209);
     --error-color: rgb(255, 85, 78);
     --success-color: green;
+    --box-shadow: 0 0 30px 0 #00000011;
 }
