--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,32 +1,32 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
-.crypto-list, .option-list::-webkit-scrollbar {
+.home-component .crypto-list-container, .option-list::-webkit-scrollbar {
     display: none;
 }
 /* Hide scrollbar for IE, Edge and Firefox */
-.crypto-list, .option-list {
+.home-component .crypto-list-container, .option-list {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-}
-
-.crypto-list {
-    margin-right: 3%;
 }
 .buy-and-sell-form-container {
     justify-content: center;
     align-items: center;
 }
-.crypto-list, .buy-and-sell-form-container {
-    width: 55%;
+.home-component .crypto-list-container, .buy-and-sell-form-container {
+    width: 50%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     overflow: scroll;
+    height: auto;
 }
-.crypto-list {
-    width: 35%;
+.home-component .crypto-list {
+    width: 80%;
 }
 .crypto-card:first-of-type {
     margin-top: 0;
+}
+.crypto-card:last-of-type {
+    margin-bottom: 30px;
 }
 .crypto-card {
     background-color: var(--light-bg-color);
@@ -35,7 +35,8 @@
     justify-content: space-between;
     padding: 20px 25px;
     border-radius: 10px;
-    margin: 15px 0;
+    margin: 10px 0;
+    box-shadow: var(--box-shadow);
 }
 .crypto-icon-name {
     display: flex;
