--- a/client/src/styles/wallet.css
+++ b/client/src/styles/wallet.css
@@ -1,32 +1,43 @@
 .wallet-component {
     overflow: auto;
-}
-.crypto-list {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    justify-content: flex-start !important;
+}
+.wallet-component .crypto-list {
+    width: calc(100% - 20px);
+    margin: 0 10px;
+    display: flex;
+    flex-wrap: wrap;
     height: max-content;
 }
-.crypto {
-    width: calc(100% - 50px);
+.wallet-component .crypto {
+    width: 150px;
+    height: 200px;
     background-color: var(--light-bg-color);
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 10px 25px;
-    margin: 10px 0;
+    margin: 10px;
     border-radius: 15px;
+    box-shadow: var(--box-shadow);
 }
 .crypto .crypto-data {
     display: flex;
     align-items: center;
 }
 .crypto .crypto-data img {
-    width: 35px;
+    width: 37px;
     margin-right: 10px;
 }
 .crypto .prices {
-    text-align: right;
+    text-align: center;
+}
+.crypto .prices .crypto-amount {
+    font-size: 17px;
+    font-weight: 600;
 }
 .crypto .prices .currency-amount {
     font-size: 14px;
