--- a/client/src/styles/pageNotFound.css
+++ b/client/src/styles/pageNotFound.css
@@ -5,20 +5,47 @@
     top: 0;
     left: 0;
     background-color: var(--bg-color);
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('../img/blob-bg.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+}
+.bg-container {
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: var(--bg-color);
 }
 .content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.content {
+    width: 250px;
     background-color: var(--light-bg-color);
     border-radius: 15px;
-    padding: 20px;
+    padding: 35px;
+    box-shadow: var(--box-shadow);
 }
-button {
+.content .title {
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+}
+.content .text {
+    font-size: 13px;
+    opacity: .4;
+    text-align: center;
+    margin: 30px 0;
+}
+.content button {
+    width: 100%;
     padding: 10px 15px;
-    border-radius: 15px;
+    border-radius: 10px;
 }
