start settings page

--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -6,7 +6,7 @@
     left: 0;
     align-items: center;
     background-color: var(--bg-color);
-    background-image: url('../img/blob-bg.svg');
+    background-image: url('../img/1.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
