--- a/client/src/styles/settings.css
+++ b/client/src/styles/settings.css
@@ -10,9 +10,9 @@
 .user-data-container .element {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #80808047;
-    margin: 30px 0;
-    padding-bottom: 10px;
+    border-bottom: 1px solid #80808027;
+    margin: 20px 0;
+    padding-bottom: 20px;
 }
 .user-data-container .hide p {
     opacity: .3;
@@ -34,12 +34,13 @@
     stroke: var(--main-color);
 }
 .user-data-container .element input {
+    width: 40%;
     padding: 9px;
     outline: none;
-    background-color: rgb(75, 75, 75);
+    background-color: #303030;
     border: none;
     color: white;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 
 
@@ -53,17 +54,25 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, .2);
+    background-color: rgba(0, 0, 0, .5);
 }
 .change-password-form {
+    width: auto;
     position: relative;
-    background-color: red;
-    padding: 30px;
+    background-color: var(--bg-color);
+    padding: 40px;
     border-radius: 15px;
 }
-.change-password-form svg {
+.change-password-form .form-title {
+    margin: 20px 5px;
+    font-size: 20px;
+}
+.change-password-form .cross {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 18px;
+    right: 18px;
     cursor: pointer;
+}
+.change-password-form .input-submit {
+    padding: 4%;
 }
