--- a/client/src/styles/mainComponent.css
+++ b/client/src/styles/mainComponent.css
@@ -1,6 +1,6 @@
 .main-component-container {
     width: 100%;
-    height: 90vh;
+    height: calc(100vh - 90px);
 }
 .main-component-container .component {
     width: 100%;
