--- a/client/src/styles/wallet.css
+++ b/client/src/styles/wallet.css
@@ -11,6 +11,23 @@
     flex-wrap: wrap;
     height: max-content;
 }
+.wallet-component .wallet-amount-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 30vh;
+    line-height: 33px;
+}
+.wallet-component .wallet-amount .total-balance {
+    font-size: 14px;
+    opacity: .3;
+}
+.wallet-component .wallet-amount .amount {
+    font-size: 45px;
+    font-weight: 700;
+}
 .wallet-component .crypto {
     width: 150px;
     height: 200px;
