--- a/client/src/styles/colors.css
+++ b/client/src/styles/colors.css
@@ -1,5 +1,5 @@
 :root {
-    --main-color: rgb(251, 174, 60);
+    --main-color: rgb(251, 174, 60); /* #FBAE3C */
     --main-color-low-opacity: rgba(251, 174, 60, .4);
     /* --bg-color: rgb(27, 27, 27); */
     --bg-color: rgb(21, 22, 23);
