--- a/client/src/styles/about.css
+++ b/client/src/styles/about.css
@@ -31,6 +31,7 @@
     text-decoration: none;
     font-size: 13px;
     font-weight: 600;
+    line-height: 23px;
 }
 .creator {
     display: flex;
