--- a/client/src/styles/colors.css
+++ b/client/src/styles/colors.css
@@ -1,9 +1,7 @@
 :root {
     --main-color: rgb(251, 174, 60); /* #FBAE3C */
     --main-color-low-opacity: rgba(251, 174, 60, .4);
-    /* --bg-color: rgb(27, 27, 27); */
-    --bg-color: rgb(21, 22, 23);
-    /* --light-bg-color: rgb(32, 32, 32); */
+    --bg-color: rgb(21, 22, 23); /* #151617 */
     --light-bg-color: rgb(25, 26, 27);
     --light-white: rgb(209, 209, 209);
     --error-color: #ff3333;
