--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -326,6 +326,9 @@ form button {
     font-weight: 500;
     width: 100%;
 }
+.first-connection-msg-component p {
+    margin-bottom: 5px;
+}
 .first-connection-msg-component .cross {
     position: absolute;
     top: 10px;
