--- a/client/src/styles/menu.css
+++ b/client/src/styles/menu.css
@@ -1,5 +1,5 @@
 .menu-container, .retracted-menu {
-    width: 250px;
+    width: 250px !important;
     background-color: var(--light-bg-color);
     height: 100vh;
     display: flex;
@@ -72,7 +72,8 @@
 .links-container svg {
     width: 25px;
     height: 25px;
-    margin-right: 2%;
+    margin-right: 10px;
+    position: relative;
 }
 .links-container a.active svg path {
     stroke: var(--main-color);
